fixed ui bug in footer, language option when `language` is too short

--- a/fis/sass/style.scss
+++ b/fis/sass/style.scss
@@ -256,6 +256,7 @@ input[type="radio"], input[type="checkbox"], .checkbox, .radio{
 		top: -74px;
 		padding: 0px;
 		margin: 0 0px 0 -5px;
+		width: 70px;
 		box-shadow: 0 0 2px 1px gray;
 		background-color: white;
 		
